--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="profile.html">Your Profile</a>
                   <a class="dropdown-item" href="#">Register</a>
-                  <a class="dropdown-item" href="#">Login</a>
+                  <a class="dropdown-item" href="login.html">Login</a>
         </ul>
         </div>
     </nav>
