--- a/login.html
+++ b/login.html
@@ -1,6 +1,5 @@
 <html lang="en">
 <head>
-    <base href="/"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ATI Kegalle - Home</title>
@@ -21,18 +20,15 @@
         </button>
 
         <div class="collapse navbar-collapse" id="minimenu">
-        <!-- Logo -->
-        <a class="navbar-brand">
-            <img src="assets/logo.png" width="30" height="30" alt="">
-        </a>
-        <!-- End of logo -->
-    
+            
         <ul class='nav navbar-nav'>
-            <li class='nav-item'><a class='nav-link' href='index.html'>Home</a> </li>
-            <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
-            <li class='nav-item'><a class='nav-link' href='gallery.html'>Gallery</a> </li>
-            <li class='nav-item'><a class='nav-link' href='download.html'>Download</a> </li>
-            <li class='nav-item'><a class='nav-link' href='contact.html'>Contact Us</a> </li>
+            <li class='nav-item'><a class='nav-link' href=''>
+                <img src="assets/logo.png" width="30" height="30" alt="">
+            </a> </li>
+            <li class='nav-item'><a class='nav-link' href='/announcement.html'>Announcement</a> </li>
+            <li class='nav-item'><a class='nav-link' href='/gallery.html'>Gallery</a> </li>
+            <li class='nav-item'><a class='nav-link' href='/download.html'>Download</a> </li>
+            <li class='nav-item'><a class='nav-link' href='/contact.html'>Contact Us</a> </li>
              <!-- Dropdown menu -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-fw fa-user"></i>
