--- a/gallery.html
+++ b/gallery.html
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="minimenu">
 
         <ul class='nav navbar-nav'>
-          <li class='nav-item'><a class='nav-link' href='/'>
+          <li class='nav-item'><a class='nav-link' href=''>
             <img src="assets/logo.png" width="30" height="30" alt="">
         </a> </li>
-            <li class='nav-item'><a class='nav-link' href='/announcement.html'>Announcement</a> </li>
-            <li class='nav-item'><a class='nav-link' href='/gallery.html'>Gallery</a> </li>
-            <li class='nav-item'><a class='nav-link' href='/download.html'>Download</a> </li>
-            <li class='nav-item'><a class='nav-link' href='/contact.html'>Contact Us</a> </li>
+            <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
+            <li class='nav-item'><a class='nav-link' href='gallery.html'>Gallery</a> </li>
+            <li class='nav-item'><a class='nav-link' href='download.html'>Download</a> </li>
+            <li class='nav-item'><a class='nav-link' href='contact.html'>Contact Us</a> </li>
              <!-- Dropdown menu -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-fw fa-user"></i>
