--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="minimenu">
         
         <ul class='nav navbar-nav'>
-            <li class='nav-item'><a class='nav-link' href='/'>
+            <li class='nav-item'><a class='nav-link' href=''>
                     <img src="assets/logo.png" width="30" height="30" alt="">
                 </a> </li>
             <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
