--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="/loginstyle.css">
+    <link rel="stylesheet" href="loginstyle.css">
 
 </head>
 
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="minimenu">
 
         <ul class='nav navbar-nav'>
-            <li class='nav-item'><a class='nav-link' href=''>
+            <li class='nav-item'><a class='nav-link' href='/index.html'>
                 <img src="assets/logo.png" width="30" height="30" alt="">
             </a> </li>
             <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
