--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ATI Kegalle - Announcements</title>
+    <title>ATI Kegalle - Gallery</title>
     <!-- Required bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,7 +27,6 @@
         </a> </li>
             <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
             <li class='nav-item'><a class='nav-link' href='gallery.html'>Gallery</a> </li>
-            <li class='nav-item'><a class='nav-link' href='download.html'>Download</a> </li>
             <li class='nav-item'><a class='nav-link' href='contact.html'>Contact Us</a> </li>
              <!-- Dropdown menu -->
             <li class="nav-item dropdown">
@@ -89,16 +88,10 @@
   <!-- Gallery -->
 
     <!-- Footer -->
-    <footer>
-    <div class="footer fixed-bottom">
-        <div class="container">
-        <div class="row">
-        <div class="col-md-12 text-center">
-        <p>Made with ❤️ by HNDIT 2019 batch.</p>
-        </div>
-        </div>
-        </div>
-        </div>
+    <footer class="footer text-center text-white fixed-bottom">
+      <div class="text-center p-0" style="background-color: rgba(0, 0, 0, 0.2);">
+          Made with ❤️ by HNDIT 2019 batch.
+      </div>
     </footer>
       
 
