--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Navigation bar -->
-    <nav id='mainNav' class='navbar navbar-expand-md navbar-light navbar-fixed-top'>
+    <nav id='mainNav' class='mb-3 navbar navbar-expand-md navbar-light navbar-fixed-top'>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#minimenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,7 +27,6 @@
                 </a> </li>
             <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
             <li class='nav-item'><a class='nav-link' href='gallery.html'>Gallery</a> </li>
-            <li class='nav-item'><a class='nav-link' href='download.html'>Download</a> </li>
             <li class='nav-item'><a class='nav-link' href='contact.html'>Contact Us</a> </li>
              <!-- Dropdown menu -->
             <li class="nav-item dropdown">
@@ -41,9 +40,9 @@
         </div>
     </nav>
     <!-- Top jumbotron -->
-    <div class="p-1 md-4 rounded-3" id="home-jumbotron-1">
+    <div class="mb-4 p-1 md-4 " id="home-jumbotron-1">
         <div class="col-md-11">
-            <img src="assets/SLIATE.png" class="pull-right img-responsive" width="100" height="150"/>
+            <img src="assets/SLIATE.png" class="pull-right img-responsive rounded" width="100" height="150"/>
         </div>
         <div class="container-fluid py-5">
           <h1 class="display-5 fw-bold";>Advanced Technological Institute of Kegalle</h1>
@@ -74,17 +73,11 @@
 
     <br>
     <!-- Footer -->
-    <footer>
-    <div class="footer fixed-bottom">
-        <div class="container">
-        <div class="row">
-        <div class="col-md-12 text-center">
-        <p>Made with ❤️ by HNDIT 2019 batch.</p>
+    <footer class="footer text-center text-white fixed-bottom">
+        <div class="text-center p-0" style="background-color: rgba(0, 0, 0, 0.2);">
+            Made with ❤️ by HNDIT 2019 batch.
         </div>
-        </div>
-        </div>
-        </div>
-    </footer>
+      </footer>
       
 
     <!-- Required bootstrap JS -->
