--- a/login.html
+++ b/login.html
@@ -27,7 +27,6 @@
             </a> </li>
             <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
             <li class='nav-item'><a class='nav-link' href='gallery.html'>Gallery</a> </li>
-            <li class='nav-item'><a class='nav-link' href='download.html'>Download</a> </li>
             <li class='nav-item'><a class='nav-link' href='contact.html'>Contact Us</a> </li>
              <!-- Dropdown menu -->
             <li class="nav-item dropdown">
@@ -68,17 +67,11 @@
 
 
  <!-- Footer -->
- <footer>
-    <div class="footer fixed-bottom">
-        <div class="container">
-        <div class="row">
-        <div class="col-md-12 text-center">
-        <p>Made with ❤️ by HNDIT 2019 batch.</p>
-        </div>
-        </div>
-        </div>
-        </div>
-    </footer>
+ <footer class="footer text-center text-white fixed-bottom">
+    <div class="text-center p-0" style="background-color: rgba(0, 0, 0, 0.2);">
+        Made with ❤️ by HNDIT 2019 batch.
+    </div>
+  </footer>
       
 
     <!-- Required bootstrap JS -->
