--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,6 @@
             </a> </li>
             <li class='nav-item'><a class='nav-link' href='announcement.html'>Announcement</a> </li>
             <li class='nav-item'><a class='nav-link' href='gallery.html'>Gallery</a> </li>
-            <li class='nav-item'><a class='nav-link' href='download.html'>Download</a> </li>
             <li class='nav-item'><a class='nav-link' href='contact.html'>Contact Us</a> </li>
              <!-- Dropdown menu -->
             <li class="nav-item dropdown">
@@ -42,7 +41,7 @@
     </nav>
     <br>
     <!-- Content-->
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-12">
                 <h2 class="text-center">Your Profile</h2>
@@ -117,16 +116,10 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-    <div class="footer fixed-bottom">
-        <div class="container">
-        <div class="row">
-        <div class="col-md-12 text-center">
-        <p>Made with ❤️ by HNDIT 2019 batch.</p>
-        </div>
-        </div>
-        </div>
-        </div>
+    <footer class="footer text-center text-white fixed-bottom">
+      <div class="text-center p-0" style="background-color: rgba(0, 0, 0, 0.2);">
+          Made with ❤️ by HNDIT 2019 batch.
+      </div>
     </footer>
       
 
