Gallery and other pages updated

--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
                   <a class="dropdown-item" href="profile.html">Your Profile</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#">Register</a>
+                  <a class="dropdown-item" href="register.html">Register</a>
                 </li>
                 <li>
                   <a class="dropdown-item" href="login.html">Login</a>
@@ -81,6 +81,7 @@
     <br>
     
     <!-- Gallery -->
+    <div class="container">
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
@@ -124,6 +125,50 @@
       />
     </div>
   </div>
+  <div class="row mb-2">
+    <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+      <img
+        src="assets/g7.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+  
+      <img
+        src="assets/g8.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+  
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="assets/g9.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+  
+      <img
+        src="assets/g10.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+  
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="assets/g11.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+  
+      <img
+        src="assets/g12.jpg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+  </div>
+</div>
   <!-- Gallery -->
 
     <!-- Footer -->
