--- a/announcement.html
+++ b/announcement.html
@@ -63,7 +63,7 @@
                     <a class="dropdown-item" href="profile.html">Your Profile</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Register</a>
+                    <a class="dropdown-item" href="register.html">Register</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="login.html">Login</a>
@@ -95,10 +95,9 @@
             <!--Card content-->
             <div class="card-body">
               <!--Title-->
-              <h4 class="card-title">Date</h4>
+              <h4 class="card-title">2021-05-22</h4>
               <!--Text-->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
+              <p class="card-text">Advanced Technological Institute Kegalle provides it's four-storied building to Armed Forces and Health Services to set up temporary Covid-19 quarantine center.</p>
             </div>
 
             </div>
@@ -110,10 +109,9 @@
             <!--Card content-->
             <div class="card-body">
               <!--Title-->
-              <h4 class="card-title">Date</h4>
+              <h4 class="card-title">2021-05-05</h4>
               <!--Text-->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
+              <p class="card-text">Selection interviews and registrations for 2020 intake of HND programmes are postponed until further notice due to the current status of the Covid-19 pandemic.</p>
             </div>
 
             </div>
