--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     <a class="dropdown-item" href="profile.html">Your Profile</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Register</a>
+                    <a class="dropdown-item" href="register.html">Register</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="login.html">Login</a>
@@ -100,7 +100,7 @@
           <p class="card-text">
             <a href="mailto:kavindaheshan@gmail.com">kavindaheshan@gmail.com</a>
           </p>
-          <a href="https://www.facebook.com/max.kavinda" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/max.kavinda" style="background-color: #3b5998" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
 
@@ -115,7 +115,7 @@
           <p class="card-text">
             <a href="mailto:pasindujayanada@gmail.com">pasindujayanada@gmail.com</a>
           </p>
-          <a href="https://www.facebook.com/pasindujr" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/pasindujr" style="background-color: #3b5998" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
           <p class="card-text">
             <a href="mailto:chamiduravihara@gmail.com">chamiduravihara@gmail.com</a>
           </p>
-          <a href="https://www.facebook.com/chamidu.ravihara.3" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/chamidu.ravihara.3" style="background-color: #3b5998" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
 
@@ -146,7 +146,7 @@
           <p class="card-text">
             <a href="mailto:eronmaduwantha@gmail.com">eronmaduwantha@gmail.com</a>
           </p>
-          <a href="https://www.facebook.com/eron.madhuwantha" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/eron.madhuwantha" style="background-color: #3b5998" class="btn btn-primary"><i class="fab fa-facebook-f"></i></a>
         </div>
       </div>
     </div>
