--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
       <!-- Collapsible wrapper -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
   
           <!-- Link -->
           <li class="nav-item">
@@ -62,7 +62,7 @@
                 <a class="dropdown-item" href="profile.html">Your Profile</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Register</a>
+                <a class="dropdown-item" href="register.html">Register</a>
               </li>
               <li>
                 <a class="dropdown-item" href="login.html">Login</a>
@@ -119,15 +119,14 @@
         <div class="col-lg-12 col-md-12 mb-4">
 
           <!--Card-->
-          <div class="card">
+          <div class="card border border-danger">
 
             <!--Card content-->
             <div class="card-body">
               <!--Title-->
-              <h4 class="card-title">Announcement 1</h4>
+              <h4 class="card-title">Announcement</h4>
               <!--Text-->
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                card's content.</p>
+              <p class="card-text">Advanced Technological Institute Kegalle provides it's four-storied building to Armed Forces and Health Services to set up temporary Covid-19 quarantine center.</p>
             </div>
 
           </div>
