--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
                     <a class="dropdown-item" href="profile.html">Your Profile</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Register</a>
+                    <a class="dropdown-item" href="register.html">Register</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="login.html">Login</a>
