Finalized. Minor changes might occur.

--- a/admin-forms.html
+++ b/admin-forms.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>ATI Kegalle - Gallery</title>
+		<title>ATI Kegalle - Admin</title>
 		<!-- Font Awesome -->
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -21,7 +20,7 @@
 		/>
 	</head>
 
-	<body>
+	<body class="main-bg">
 		<!-- Navbar -->
 		<nav
 			class="navbar navbar-expand-lg navbar-dark mb-3"
@@ -92,98 +91,13 @@
 			<!-- Container wrapper -->
 		</nav>
 		<!-- Navbar -->
-		<br />
 
-		<!-- Gallery -->
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-					<img
-						src="assets/g1.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-
-					<img
-						src="assets/g2.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-				</div>
-
-				<div class="col-lg-4 mb-4 mb-lg-0">
-					<img
-						src="assets/g3.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-
-					<img
-						src="assets/g4.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-				</div>
-
-				<div class="col-lg-4 mb-4 mb-lg-0">
-					<img
-						src="assets/g5.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-
-					<img
-						src="assets/g6.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-				</div>
+		<div class="login-container text-center">
+			<div>
+				<h1 class="logo-badge"><span class="fas fa-user-cog"></span></h1>
 			</div>
-			<div class="row mb-2">
-				<div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-					<img
-						src="assets/g7.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-
-					<img
-						src="assets/g8.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-				</div>
-
-				<div class="col-lg-4 mb-4 mb-lg-0">
-					<img
-						src="assets/g9.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-
-					<img
-						src="assets/g10.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-				</div>
-
-				<div class="col-lg-4 mb-4 mb-lg-0">
-					<img
-						src="assets/g11.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-
-					<img
-						src="assets/g12.jpg"
-						class="w-100 shadow-1-strong rounded mb-4"
-						alt=""
-					/>
-				</div>
-			</div>
+			<h3 class="text-whitesmoke">Admin Control</h3>
 		</div>
-		<!-- Gallery -->
 
 		<!-- Footer -->
 		<footer class="footer text-center text-white fixed-bottom">
