--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <h2>Advanced Technological Institute of Kegalle</h2>
             <hr>
             <p>The Advanced Technological Institute of Kegalle is governed by Sri Lanka Institute of Advanced Technological Education. ATI Kegalle was established on 29th of January 2009, with a view of catering the requirements of higher education of the qualified and eligible students in Kegalle District.</p>
-            <a href="https://atikegalle.com/" target="_blank" class="btn btn-indigo">Visit ATI Kegalle</a>
+            <a href="https://atikegalle.com/" target="_blank" class="btn btn-primary">Visit ATI Kegalle</a>
   
           </div>
           <!--Grid column-->
