--- a/qrSubmit/visitor-submit.html
+++ b/qrSubmit/visitor-submit.html
@@ -30,8 +30,8 @@
 			<!-- Container wrapper -->
 			<div class="container-fluid">
 				<!-- Navbar brand -->
-				<a class="navbar-brand" href="/./index.html"
-					><img src="/./assets/logo.png" width="30" height="30" alt=""
+				<a class="navbar-brand" href="./index.html"
+					><img src="./assets/logo.png" width="30" height="30" alt=""
 				/></a>
 
 				<!-- Toggle button -->
@@ -52,13 +52,13 @@
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<!-- Link -->
 						<li class="nav-item">
-							<a class="nav-link" href="/./announcement.html">Announcements</a>
+							<a class="nav-link" href="./announcement.html">Announcements</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/./gallery.html">Gallery</a>
+							<a class="nav-link" href="./gallery.html">Gallery</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/./contact.html">Contact Us</a>
+							<a class="nav-link" href="./contact.html">Contact Us</a>
 						</li>
 
 						<!-- Dropdown -->
@@ -76,15 +76,15 @@
 							<!-- Dropdown menu -->
 							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<li>
-									<a class="dropdown-item" href="/./profile.html"
+									<a class="dropdown-item" href="./profile.html"
 										>Your Profile</a
 									>
 								</li>
 								<li>
-									<a class="dropdown-item" href="/./register.html">Register</a>
+									<a class="dropdown-item" href="./register.html">Register</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="/./login.html">Login</a>
+									<a class="dropdown-item" href="./login.html">Login</a>
 								</li>
 							</ul>
 						</li>
