--- a/member-enter.html
+++ b/member-enter.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>ATI Kegalle - Admin</title>
-		<!-- Required bootstrap CSS -->
+		<title>ATI Kegalle - Enter as a Member</title>
 		<!-- Font Awesome -->
 		<link
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -19,10 +19,9 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="loginstyle.css" />
 	</head>
 
-	<body class="main-bg">
+	<body>
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark mb-3" style="background-color:#03045e;">
 			<!-- Container wrapper -->
@@ -97,64 +96,49 @@
 		  </nav>
 		  <!-- Navbar -->
 
-    <!--These links should be deleted-->
-    should be deleted<br>
-    <a href="admin-forms.html">Admin forms</a><br>
-		<!--Login form-->
-
-		<div class="login-container text-c animated flipInX">
-			<div>
-				<h1 class="logo-badge text-whitesmoke">
-					<span class="fas fa-user-cog"></span>
-				</h1>
-			</div>
-			<h3 class="text-whitesmoke">Admin Log In</h3>
-			<div class="container-content">
+		<!--Content-->
+		<div class="container">
+			<div class="login-container text-center">
+				<div>
+					<h1 class="logo-badge"><span class="fas fa-address-book"></span></h1>
+				</div>
+				<h3 class="text-whitesmoke mb-4">Enter as a Member</h3>
 				<form>
-					<!-- Email input -->
-					<div class="form-outline mb-4">
-						<input type="email" class="form-control" />
-						<label class="form-label" for="form1Example1">Email address</label>
+					<div class="col d-flex justify-content-center">
+						<!-- Email input -->
+						<div class="form-outline mb-4">
+							<input type="text" id="form1Example1" class="form-control" />
+							<label class="form-label" for="form1Example1">Username</label>
+						</div>
 					</div>
 
-					<!-- Password input -->
-					<div class="form-outline mb-4">
-						<input type="password" class="form-control" />
-						<label class="form-label" for="form1Example2">Password</label>
+					<div class="col d-flex justify-content-center">
+						<!-- Password input -->
+						<div class="form-outline mb-4">
+							<input type="password" id="form1Example2" class="form-control" />
+							<label class="form-label" for="form1Example2">Password</label>
+						</div>
 					</div>
 
 					<!-- 2 column grid layout for inline styling -->
 					<div class="row mb-4">
 						<div class="col d-flex justify-content-center">
-							<!-- Checkbox -->
-							<div class="form-check">
-								<input
-									class="form-check-input"
-									type="checkbox"
-									value=""
-									id="form1Example3"
-									checked
-								/>
-								<label class="form-check-label" for="form1Example3">
-									Remember me
-								</label>
+							<div class="col">
+								<!-- Simple link -->
+								<a href="visitor-enter.html"
+									>Not a member of ATI Kegalle?<br />Click here.</a
+								>
 							</div>
-						</div>
-
-						<div class="col">
-							<!-- Simple link -->
-							<a href="#!">Forgot password?</a>
 						</div>
 					</div>
 
 					<!-- Submit button -->
-					<button type="submit" class="btn btn-primary btn-block">
-						Log in
-					</button>
+					<button type="submit" class="btn btn-primary">Submit</button>
 				</form>
 			</div>
 		</div>
 
+		<br />
 		<!-- Footer -->
 		<footer class="footer text-center text-white fixed-bottom">
 			<div
