--- a/register.html
+++ b/register.html
@@ -123,16 +123,28 @@
 					<input type="text" id="form6Example3" class="form-control" />
 					<label class="form-label" for="form6Example3">User Name</label>
 				</div>
-				<!-- Text input -->
-				<div class="form-outline mb-4">
-					<input type="text" id="form6Example4" class="form-control" />
-					<label class="form-label" for="form6Example4">Department</label>
+				<!-- Department select -->
+				<div class="mb-4">
+					<label class="form-label" for="form6Example5">Department</label>
+					<select>
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">IT</option>
+						<option value="2">Accounting</option>
+						<option value="3">English</option>
+						<option value="4">Project Management</option>
+					</select>
 				</div>
 
-				<!-- Designation input -->
-				<div class="form-outline mb-4">
-					<input type="text" id="form6Example5" class="form-control" />
+				<!-- Designation select -->
+				<div class="mb-4">
 					<label class="form-label" for="form6Example5">Designation</label>
+					<select>
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">Director</option>
+						<option value="2">Academic</option>
+						<option value="3">Student</option>
+						<option value="4">Non-academic</option>
+					</select>
 				</div>
 				<!-- NIC input -->
 				<div class="form-outline mb-4">
