--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         </div>
 
         </div>
+
+        <div style="text-align:center;">
+          <script type="text/javascript" src="http://services.webestools.com/cpt_visitors/70589-1-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"></a>
+
     <br>
     <!-- Footer -->
     <footer class="footer text-center text-white fixed-bottom">
