visitor count updated

--- a/index.html
+++ b/index.html
@@ -154,8 +154,10 @@
 
         </div>
 
-        <div style="text-align:center;">
-          <script type="text/javascript" src="http://services.webestools.com/cpt_visitors/70589-1-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"></a>
+        <div class="counter">
+          <p>Visitor count</p>
+          <h1 id="count">0</h1>
+        </div>
 
     <br>
     <!-- Footer -->
