--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"
     ></script>
 
+      <script type="text/javascript" src="/counter.js"></script>
 </body>
 
 </html>
