Profile edit function added

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -112,89 +112,94 @@
 								<th scope="row">1</th>
 								<td>Name</td>
 								<td>
-									<p>userName</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">2</th>
 								<td>User Name</td>
 								<td>
-									<p>userUserName</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">3</th>
 								<td>Department</td>
 								<td>
-									<p>userDepartment</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">4</th>
 								<td>Designation</td>
 								<td>
-									<p>userDesignation</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">5</th>
 								<td>NIC</td>
 								<td>
-									<p>userNIC</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">6</th>
 								<td>Birthday</td>
 								<td>
-									<p>userBirthday</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">7</th>
 								<td>Age</td>
 								<td>
-									<p>userAge</p>
+									<input type="number" id="typeNumber" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">8</th>
 								<td>Address</td>
 								<td>
-									<p>userAddress</p>
+									<input type="text" id="typeText" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">9</th>
 								<td>Gender</td>
 								<td>
-									<p>userGender</p>
+									<select>
+										<option value="" disabled selected>
+											Choose your option
+										</option>
+										<option value="1">Male</option>
+										<option value="2">Female</option>
+									</select>
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">10</th>
 								<td>Mobile</td>
 								<td>
-									<p>userMobile</p>
+									<input type="number" id="typeNumber" class="form-control" />
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">11</th>
 								<td>Email</td>
 								<td>
-									<p>userEmail</p>
+									<input type="email" id="typeEmail" class="form-control" />
 								</td>
 							</tr>
 						</tbody>
 					</table>
 					<div class="text-center pb-3">
-						<a href="/edit-profile.html"><button type="button" class="btn btn-success">Edit Profile</button></a>
+						<a href="/profile.html"><button type="button" class="btn btn-success">Save</button></a>
 					</div>
 				</div>
 			</div>
 		</div>
-		
-		
+
 		<!-- Footer -->
 		<footer class="footer text-center text-white fixed-bottom">
 			<div
