--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           </li>
   
           <!-- Manual submit Dropdown -->
-         
+          
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-               <strong>Enter ATI</strong> </i>
+            <a class="nav-link dropdown-toggle" style="color: aqua;" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+               <text style="color: aqua;"><strong>Enter ATI</strong> </text>
             </a>
             <!-- Dropdown menu -->
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -72,7 +72,7 @@
           <!-- Login Dropdown -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-fw fa-user"></i>
+                <i class="fa fa-fw fa-user" ></i>
             </a>
             <!-- Dropdown menu -->
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
