--- a/login.html
+++ b/login.html
@@ -52,9 +52,10 @@
 				  </li>
 		  
 				  <!-- Manual submit Dropdown -->
+          
 				  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-						Enter ATI</i>
+					<a class="nav-link dropdown-toggle" style="color: aqua;" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+					   <text style="color: aqua;"><strong>Enter ATI</strong> </text>
 					</a>
 					<!-- Dropdown menu -->
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
