--- a/Member-details.html
+++ b/Member-details.html
@@ -49,22 +49,8 @@
 				  <li class="nav-item">
 					<a class="nav-link" href="#">Contact Us</a>
 				  </li>
-		  
-				  <!-- Manual submit Dropdown -->
-				  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-						Enter ATI</i>
-					</a>
-					<!-- Dropdown menu -->
-					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					  <li>
-						<a class="dropdown-item" href="#">Enter as a member</a>
-					  </li>
-					  <li>
-						<a class="dropdown-item" href="#">Enter as a visitor</a>
-					  </li>
-					  
-					</ul>
+				  <li class="nav-item">
+					<a class="nav-link" href="member-enter.html"><text style="color: aqua;"><strong>Enter ATI</strong> </text></a>
 				  </li>
 				  <!-- Login Dropdown -->
 				  <li class="nav-item dropdown">
