--- a/register.html
+++ b/register.html
@@ -174,10 +174,25 @@
 					<input type="email" id="form6Example5" class="form-control" />
 					<label class="form-label" for="form6Example5">Email</label>
 				</div>
+
+				<!-- Password input -->
+				<div class="form-outline mb-4">
+					<input type="password" id="form6Example6" class="form-control" />
+					<label class="form-label" for="form6Example6">Enter Password</label>
+				</div>
+
+				<!-- Password input -->
+				<div class="form-outline mb-4">
+					<input type="password" id="form6Example6" class="form-control" />
+					<label class="form-label" for="form6Example6">Confirm Password</label>
+				</div>
+
 				<!-- Submit button -->
+				<div class="container pb-2 ">
 				<button type="submit" class="btn btn-primary btn-block mb-4">
 					Create Account
 				</button>
+			</div>
 			</form>
 		</div>
 
