--- a/edit-profile.html
+++ b/edit-profile.html
@@ -112,14 +112,31 @@
 								<th scope="row">3</th>
 								<td>Department</td>
 								<td>
-									<input type="text" id="typeText" class="form-control" />
+									<div class="mb-4">
+										<select>
+											<option value="" disabled selected>Choose your option</option>
+											<option value="1">IT</option>
+											<option value="2">Accounting</option>
+											<option value="3">English</option>
+											<option value="4">Project Management</option>
+										</select>
+									</div>
 								</td>
 							</tr>
 							<tr>
 								<th scope="row">4</th>
 								<td>Designation</td>
 								<td>
-									<input type="text" id="typeText" class="form-control" />
+									<div class="mb-4">
+										
+										<select>
+											<option value="" disabled selected>Choose your option</option>
+											<option value="1">Director</option>
+											<option value="2">Academic</option>
+											<option value="3">Student</option>
+											<option value="4">Non-academic</option>
+										</select>
+									</div>
 								</td>
 							</tr>
 							<tr>
