Finished forget-password.html and connected necessary links.

--- a/forget-password.html
+++ b/forget-password.html
@@ -86,7 +86,95 @@
 
 
   <!-- Content -->
+  <div class="container">
+    <div class="login-container text-center">
+      <div>
+        <h1 class="logo-badge"><span class="fas fa-address-book"></span></h1>
+      </div>
+      <h3 class="text-whitesmoke mb-4">Reset Password</h3>
+      <form>
+        <div class="col d-flex justify-content-center">
+          <!-- Username input -->
+          <div class="form-outline mb-3">
+            <input type="text" id="form1Example1" class="form-control" />
+            <label class="form-label " for="form1Example1">Enter Username</label>
+          </div>
+        </div>
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-primary mb-3">Submit</button>
 
+        <div class="col d-flex justify-content-center">
+          <!-- Question 1 input -->
+          <div class="form-outline mb-4 ">
+            <input type="text" id="form1Example2" class="form-control" disabled/>
+            <label class="form-label" for="form1Example2">Security Question 1</label>
+          </div>
+        </div>
+
+        <div class="col d-flex justify-content-center">
+          <!-- Question 1 answer input -->
+          <div class="form-outline mb-3">
+            <input type="text" id="form1Example1" class="form-control" />
+            <label class="form-label " for="form1Example1">Question 1 answer</label>
+          </div>
+        </div>
+
+        <div class="col d-flex justify-content-center">
+          <!-- Question 2 input -->
+          <div class="form-outline mb-4 ">
+            <input type="text" id="form1Example2" class="form-control" disabled/>
+            <label class="form-label" for="form1Example2">Security Question 2</label>
+          </div>
+        </div>
+
+        <div class="col d-flex justify-content-center">
+          <!-- Question 2 answer input -->
+          <div class="form-outline mb-3">
+            <input type="text" id="form1Example1" class="form-control" />
+            <label class="form-label " for="form1Example1">Question 2 answer</label>
+          </div>
+        </div>
+
+        <!-- Reset button -->
+        <button type="submit" class="btn btn-primary mb-3">Reset</button>
+
+        <div class="col d-flex justify-content-center">
+          <!-- New password answer input -->
+          <div class="form-outline mb-3">
+            <input type="password" id="form1Example1" class="form-control" />
+            <label class="form-label " for="form1Example1">New Password</label>
+          </div>
+        </div>
+
+        <div class="col d-flex justify-content-center">
+          <!-- Confirm password answer input -->
+          <div class="form-outline mb-3">
+            <input type="password" id="form1Example1" class="form-control" />
+            <label class="form-label " for="form1Example1">Confirm Password</label>
+          </div>
+        </div>
+
+        <!-- Reset button -->
+        <button type="submit" class="btn btn-success mb-3">Save New Password</button>
+
+        <!-- 2 column grid layout for inline styling -->
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <div class="col">
+              <!-- Simple link -->
+              <a href="login.html"
+                >Back to Login</a
+              >
+            </div>
+          </div>
+        </div>
+
+        
+      </form>
+    </div>
+  </div>
+
+  <br />
   <!-- /Content -->
 
   <!-- Footer -->
