--- a/login.html
+++ b/login.html
@@ -115,13 +115,13 @@
 						Sign In
 					</button>
 
-					<a class="text-darkyellow" href="#"
+					<a class="text-darkyellow" href="forget-password.html"
 						><small>Forgot your password?</small></a
 					>
 					<p class="text-whitesmoke text-center">
 						<small>Do not have an account?</small>
 					</p>
-					<a class="text-darkyellow" href="#"><small>Sign Up</small></a>
+					<a class="text-darkyellow" href="register.html"><small>Sign Up</small></a>
 				</form>
 			</div>
 		</div>
