--- a/visitor-enter.html
+++ b/visitor-enter.html
@@ -194,7 +194,7 @@
 					</div>
 
 					<!-- Submit button -->
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary mb-3">Submit</button>
 				</form>
 			</div>
 		</div>
