--- a/visitor-enter.html
+++ b/visitor-enter.html
@@ -105,13 +105,7 @@
 				</div>
 				<h3 class="text-whitesmoke mb-4">Enter as a Visitor</h3>
 				<form>
-					<div class="col d-flex justify-content-center">
-						<!-- Name input -->
-						<div class="form-outline mb-4">
-							<input type="text" id="form1Example2" class="form-control" />
-							<label class="form-label" for="form1Example2">Name</label>
-						</div>
-					</div>
+
 					<div class="col d-flex justify-content-center">
 						<!-- NIC input -->
 						<div class="form-outline mb-4">
@@ -119,6 +113,17 @@
 							<label class="form-label" for="form1Example2">NIC</label>
 						</div>
 					</div>
+					<!-- Submit button -->
+					<button type="submit" class="btn btn-primary mb-3"><i class="fas fa-search"></i></button>
+
+					<div class="col d-flex justify-content-center">
+						<!-- Name input -->
+						<div class="form-outline mb-4">
+							<input type="text" id="form1Example2" class="form-control" />
+							<label class="form-label" for="form1Example2">Name</label>
+						</div>
+					</div>
+					
 
 					<div class="col d-flex justify-content-center">
 						<!-- Email input -->
