--- a/admin.html
+++ b/admin.html
@@ -134,9 +134,11 @@
 					</div>
 
 					<!-- Submit button -->
-					<button type="submit" class="btn btn-primary btn-block">
+					<a href="reports.html">
+					<button type="button" class="btn btn-primary btn-block">
 						Log in
 					</button>
+				</a>
 				</form>
 			</div>
 		</div>
