--- a/visitor-enter.html
+++ b/visitor-enter.html
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 					<!-- Submit button -->
-					<button type="submit" class="btn btn-primary mb-3"><i class="fas fa-search"></i></button>
+					<button type="submit" class="btn btn-light mb-3"><i class="fas fa-search"></i></button>
 
 					<div class="col d-flex justify-content-center">
 						<!-- Name input -->
